# Pyweek37

./: .pre-commit-config.yaml  README.md  index.html  main.py  pyproject.toml  resources.pyxres  run.py  tox.ini
Assets/: tube.pyxres
src/: bird.py  hud.py  input.py  main.py  map.py  player.py  powerup.py  progression.py  sfx.py  snow_goblin.py  snowball.py
src/Assets/: tube.pyxres  tube_audio.pyxres
