[tool.poetry]
name = "pyweek37"
version = "0.0.0"
description = "pyweek game"
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^2.0.7"

[tool.poetry.dev-dependencies]
flake8 = "~4.0.1"
isort = "~5.12.0"
pre-commit = "~3.3.3"
mypy = "~1.5.1"
flake8-docstrings = "~1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
